# swagger/spring-server/src/main/java/io/swagger/api/TemplatesApiController.java
@@ -7,7 +7,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
 
+import javax.validation.constraints.Null;
+import java.io.IOException;
 import java.util.List;
 
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-11-17T13:22:11.816Z")
@@ -20,7 +24,7 @@ public class TemplatesApiController implements TemplatesApi {
     public ResponseEntity<List<TemplateDto>> templatesGet() {
         List<TemplateDto> templates = templateService.getAllTemplates();
 
-        if(templates.size() == 0) {
+        if (templates.isEmpty()) {
             return new ResponseEntity<List<TemplateDto>>(HttpStatus.NO_CONTENT);
         }
 
@@ -28,8 +32,50 @@ public class TemplatesApiController implements TemplatesApi {
     }
 
     @Override
-    public ResponseEntity<Void> templatesPost(TemplateDto templateDto) {
-        templateService.addTemplate(templateDto);
+    public ResponseEntity<Void> templatesIdDelete(@PathVariable Integer id) {
+        try {
+            templateService.deleteTemplate(id);
+        } catch (NullPointerException e) {
+            return new ResponseEntity<Void>(HttpStatus.NOT_FOUND);
+        }
+
+        return new ResponseEntity<Void>(HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<TemplateDto> templatesIdGet(@PathVariable Integer id) {
+        TemplateDto templateDto;
+
+        try {
+            templateDto = templateService.getTemplateById(id);
+        } catch (NullPointerException e) {
+            return new ResponseEntity<TemplateDto>(HttpStatus.NOT_FOUND);
+        }
+
+        return new ResponseEntity<TemplateDto>(templateDto, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> templatesIdPut(@PathVariable Integer id, @RequestBody TemplateDto templateDto) {
+        try {
+            templateService.updateTemplate(id, templateDto);
+        } catch (NullPointerException e) {
+            return new ResponseEntity<Void>(HttpStatus.NOT_FOUND);
+        } catch (IOException e) {
+            return new ResponseEntity<Void>(HttpStatus.NOT_ACCEPTABLE);
+        }
+
+        return new ResponseEntity<Void>(HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> templatesPost(@RequestBody TemplateDto templateDto) {
+        try {
+            templateService.addTemplate(templateDto);
+        } catch (Exception e) {
+            return new ResponseEntity<Void>(HttpStatus.NOT_ACCEPTABLE);
+        }
+
         return new ResponseEntity<Void>(HttpStatus.CREATED);
     }
 }
