# swagger/spring-server/src/main/java/io/swagger/service/TemplateService.java
@@ -1,11 +1,15 @@
 package io.swagger.service;
 
+import freemarker.template.Configuration;
+import freemarker.template.Template;
 import io.lozzikit.mail.api.model.TemplateDto;
 import io.swagger.entity.TemplateEntity;
 import io.swagger.repository.TemplateRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.io.IOException;
+import java.io.StringReader;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -14,14 +18,48 @@ public class TemplateService {
     @Autowired
     private TemplateRepository templateRepository;
 
-    public void addTemplate(TemplateDto templateDto) {
+    @Autowired
+    private Configuration configuration;
+
+    public void addTemplate(TemplateDto templateDto) throws IOException {
         TemplateEntity entity = new TemplateEntity(templateDto);
+        validateTemplate(templateDto);
+
         templateRepository.save(entity);
+    }
+
+    public void updateTemplate(Integer id, TemplateDto templateDto) throws IOException {
+        validateTemplate(templateDto);
+
+        TemplateEntity entity = templateRepository.findOne(id);
+        entity.setName(templateDto.getName());
+        entity.setDescription(templateDto.getDescription());
+        entity.setContent(templateDto.getContent());
+
+        templateRepository.save(entity);
+    }
+
+    public void deleteTemplate(Integer id) {
+        templateRepository.delete(id);
+    }
+
+    public TemplateDto getTemplateById(Integer id) {
+        return templateRepository.findOne(id).getTemplateDto();
     }
 
     public List<TemplateDto> getAllTemplates() {
         return templateRepository.findAll().stream()
             .map(TemplateEntity::getTemplateDto)
             .collect(Collectors.toList());
+    }
+
+    private void validateTemplate(TemplateDto templateDto) throws IOException {
+        String content = templateDto.getContent();
+
+        if (content == null) {
+            throw new IOException("Template is null!");
+        }
+
+        new Template("sample", new StringReader(content), configuration);
     }
 }
